<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_padding">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_size"
        android:layout_height="@dimen/progress_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/purple_200"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/plant_name_hint"
        android:inputType="text"
        android:textAppearance="@style/Text.strong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:inputType="text"
        android:textAppearance="@style/Text.body"
        android:hint="@string/plant_description_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/plant_comment_hint"
        android:textAppearance="@style/Text.body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/plant_count_hint"
        android:textAppearance="@style/Text.body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/plantDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/plant_plantDate_hint"
        android:ems="10"
        android:inputType="date"
        android:textIsSelectable="true"
        android:longClickable="false"
        android:focusable="false"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawableTint="@color/colorPrimary"
        android:textAppearance="@style/Text.body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/save_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plantDate"
        android:foreground="?android:attr/selectableItemBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>

